<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/converter_progress_bar"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:indeterminateTint="@color/bright_purple_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/converter_main_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="input_field_send,button_swap,title_send,button_choose_send,title_get,appbar,input_field_get,button_choose_get" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bright_purple_color"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/currency_converter"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/you_send"
        android:textAppearance="@style/ConverterFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <EditText
        android:id="@+id/input_field_send"
        style="@style/ConverterFragmentInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginEnd="@dimen/dp_32"
        android:hint="@string/default_rate_value"
        app:layout_constraintEnd_toStartOf="@id/button_choose_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_send" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_choose_send"
        style="@style/СurrencyListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_28"
        android:text="@string/default_rate"
        app:layout_constraintBottom_toBottomOf="@id/input_field_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_field_send"
        tools:text="RUB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_swap"
        style="@style/SwapButton"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_28"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_field_send" />

    <TextView
        android:id="@+id/title_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/they_get"
        android:textAppearance="@style/ConverterFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_swap" />

    <EditText
        android:id="@+id/input_field_get"
        style="@style/ConverterFragmentInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginEnd="@dimen/dp_32"
        android:hint="@string/default_rate_value"
        app:layout_constraintEnd_toStartOf="@id/button_choose_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_get" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_choose_get"
        style="@style/СurrencyListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_28"
        android:text="@string/default_rate"
        app:layout_constraintBottom_toBottomOf="@id/input_field_get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_field_get"
        tools:text="RUB" />


</androidx.constraintlayout.widget.ConstraintLayout>