<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/RatesDialogStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginBottom="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_rates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:text="@string/choose_currency"
            android:textColor="@color/black_alpha_87"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_12"
            app:layout_constraintBottom_toTopOf="@id/separator_rates"
            app:layout_constraintTop_toBottomOf="@id/title_rates"
            tools:listitem="@layout/item_rate" />

        <View
            android:id="@+id/separator_rates"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_line_height"
            android:background="@color/black_alpha_12"
            app:layout_constraintTop_toBottomOf="@id/rv_rates" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            style="@style/RatesButton"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_4"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_rates" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/RatesButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/button_ok"
            app:layout_constraintEnd_toStartOf="@id/button_ok"
            app:layout_constraintTop_toTopOf="@id/button_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>